# swagger-output.json
@@ -13,8 +13,8 @@
   "paths": {
     "/user/{email}": {
       "get": {
-        "summary": "returns all the hero names and their ids",
-        "description": "returns all the hero names and their ids",
+        "summary": "returns a users data",
+        "description": "",
         "parameters": [
           {
             "name": "email",
@@ -27,13 +27,7 @@
           "200": {
             "description": "user",
             "schema": {
-              "type": "array",
-              "items": {
-                "$ref": "#/definitions/user"
-              },
-              "xml": {
-                "name": "main"
-              }
+              "$ref": "#/definitions/user"
             }
           },
           "401": {
@@ -41,6 +35,93 @@
           },
           "404": {
             "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "put": {
+        "summary": "replaces a user in the db based on ID",
+        "description": "replaces a user in the db based on ID",
+        "parameters": [
+          {
+            "name": "email",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "obj",
+            "in": "body",
+            "description": "Replace user info",
+            "schema": {
+              "$ref": "#/definitions/user"
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      },
+      "delete": {
+        "summary": "deletes a user from the db based on ID.",
+        "description": "deletes a user from the db based on ID.",
+        "parameters": [
+          {
+            "name": "email",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "id",
+            "description": "user Id",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      }
+    },
+    "/user": {
+      "post": {
+        "summary": "add a user to the db",
+        "description": "add a user to the db",
+        "parameters": [
+          {
+            "name": "obj",
+            "in": "body",
+            "description": "Add a user",
+            "schema": {
+              "$ref": "#/definitions/user"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
           },
           "500": {
             "description": "Internal Server Error"
